--- a/smurfs/src/components/App.css
+++ b/smurfs/src/components/App.css
@@ -1,32 +1,13 @@
-.App {
-  text-align: center;
-}
-
 li {
   list-style-type: none;
 };
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+ul {
+  display: flex;
+  flex-flow: column nowrap;
+};
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+form {
+  display: flex;
+  flex-flow: column-reverse;
+};
